--- a/Airplane_Crashes_Data_Cleaning.ipynb
+++ b/Airplane_Crashes_Data_Cleaning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnfR1f8tmoBj0yJfGWi2/V",
+      "authorship_tag": "ABX9TyMmg3qMx4EoWV3OkuNxPcTy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "nR-7p6DviQS-",
         "colab": {
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "Gdx5pfn7lcRz"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +277,7 @@
         "id": "-jfRTjOfj3Gp",
         "outputId": "6c57ddbe-bdbb-4968-e2b8-064cfd4d62b9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
         "id": "7d8xv3cMnrI5",
         "outputId": "90da9798-6040-4d92-f971-42fe6ae32c1d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,6 +814,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Date: If we don’t know when the crash happened, we discard the row.\n",
+        "\n",
+        "Location: If the place is missing, “Unknown “is written. It’s better than leaving it blank.\n",
+        "\n",
+        "Operator (Airline): If we don’t know which airline it was, we say “Unknown Operator”, like saying “someone” when you don’t remember their name.\n",
+        "\n",
+        "Aboard / Fatalities / Ground: These are numbers; how many people were on the plane or died. If we’re missing some numbers, we use the middle number (median) because it’s fair.\n",
+        "\n",
+        "Therefore, we write “No summary available” If the story part is empty\n"
+      ],
+      "metadata": {
+        "id": "I93OoS48Aicc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Creating a new dataframe\n",
@@ -829,7 +846,7 @@
         "id": "GxRFw70Gn9-Z",
         "outputId": "c4b1fa66-fa21-4ebd-e435-33fa38389225"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1143,7 +1160,7 @@
         "id": "gREb4T2rq-94",
         "outputId": "7d2b7b1f-bdbc-4c85-af1a-a069b4849ae5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1187,7 @@
         "id": "8QPl-gscrkOX",
         "outputId": "10f52566-7649-4de1-f258-8065235e36d4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1216,7 @@
         "id": "8wT6RPGnsXsT",
         "outputId": "7095ba7d-af2e-4d73-def0-103663344b09"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1539,7 +1556,7 @@
         "id": "Aa2-1Ugws81k",
         "outputId": "bd236871-28fc-4e3c-d47b-a5be5dd25596"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1878,7 +1895,7 @@
         "id": "6SFCOt0XuVrb",
         "outputId": "ceb4ad29-cc64-41fa-c8b0-9bf613a59c4f"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
